# metaruby-release

./: 0001-Removed-manifest.xml-for-releasing-with-bloom.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
metaruby/: CMakeLists.txt  package.xml
rpm/: ros-indigo-metaruby.spec  template.spec  template.spec.em
